--- a/app/about.html
+++ b/app/about.html
@@ -109,10 +109,9 @@
     </div>
   </div>
 
-  <script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')
-  </script>
+  <!-- build:js js/vendor/common.js -->
+  <script src="js/vendor/common.js"></script>
+  <!-- endbuild -->
 
   <!-- build:js js/about.js -->
   <script src="js/about.js"></script>
