--- a/app/index.html
+++ b/app/index.html
@@ -152,10 +152,9 @@
     </div>
   </footer>
 
-  <script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')
-  </script>
+  <!-- build:js js/vendor/common.js -->
+  <script src="js/vendor/common.js"></script>
+  <!-- endbuild -->
 
   <!-- build:js js/home.js -->
   <script src="js/home.js"></script>
