--- a/app/about.html
+++ b/app/about.html
@@ -6,12 +6,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>balm-html</title>
-
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="css/about.css">
-
   <!--[if lt IE 9]>
   <link rel="stylesheet" href="css/ie.css">
   <script src="//cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -23,7 +20,6 @@
   <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
   <header class="navigation" role="banner">
     <div class="navigation-wrapper">
       <a href="javascript:void(0)" class="logo">
@@ -66,7 +62,6 @@
       </div>
     </div>
   </header>
-
   <div class="container">
     <div class="grid-items">
       <a href="javascript:void(0)" class="grid-item">
@@ -105,9 +100,51 @@
         <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
       </a>
     </div>
+    <div class="grid-items-lines">
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Another Item</h1>
+        <p>Lorem ipsum consectetur dolor sit amet, consectetur adipisicing elit.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Another Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item grid-item-big">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Wider Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, illum.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>A Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+      <a href="javascript:void(0)" class="grid-item">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1>Last Grid Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+      <div class="right-cover"></div>
+      <div class="bottom-cover"></div>
+    </div>
   </div>
-
-  <script src="js/vendor/common.js"></script>
   <script src="js/about.js"></script>
 </body>
 
