--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>balm-html</title>
-
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="css/home.css">
-
   <!--[if lt IE 9]>
   <link rel="stylesheet" href="css/ie.css">
   <script src="//cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -23,7 +20,6 @@
   <!--[if lt IE 10]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
   <header class="navigation" role="banner">
     <div class="navigation-wrapper">
       <a href="javascript:void(0)" class="logo">
@@ -66,26 +62,10 @@
       </div>
     </div>
   </header>
-
   <div class="container">
-    <div class="sprites">
-      <!-- icon font -->
-      <i class="fa fa-smile-o fa-2x"></i>
-      <!-- css sprites -->
-      <ul class="icon-list">
-        <li class="icon icon-3d_effects"></li>
-        <li class="icon icon-connectivity"></li>
-        <li class="icon icon-device_access"></li>
-        <li class="icon icon-multimedia"></li>
-        <li class="icon icon-offline_storage"></li>
-        <li class="icon icon-performance"></li>
-        <li class="icon icon-semantics"></li>
-        <li class="icon icon-styling"></li>
-      </ul>
-    </div>
     <div class="hero">
       <div class="hero-content">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/49db8c0f2f8066c2c3a275781503fe3303a1a9fc/source/images/placeholder.png" alt="Logo Image" class="hero-logo">
+        <img src="https://raw.githubusercontent.com/thoughtbot/empties/master/source/images/placeholder.png" alt="Logo Image" class="hero-logo">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni modi doloremque excepturi laudantium maxime explicabo cumque deleniti voluptate deserunt.</p>
       </div>
     </div>
@@ -101,7 +81,6 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
         </div>
       </div>
-
       <div class="card">
         <div class="card-image">
           <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains-4.png" alt="">
@@ -113,7 +92,6 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
         </div>
       </div>
-
       <div class="card">
         <div class="card-image">
           <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains-3.png" alt="">
@@ -126,12 +104,42 @@
         </div>
       </div>
     </div>
+    <div class="flex-boxes">
+      <a href="javascript:void(0)" class="flex-box flex-box-big">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">A Wide Flex Box Item</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad nostrum, libero! Laborum distinctio necessitatibus voluptates eaque officiis, unde illo, earum voluptatum rerum, reiciendis ipsa ex dolorem a dicta, maxime aliquam.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">Flex Box Item</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum molestiae fugiat tenetur fugit atque dignissimos, fugiat natus vitae.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">A Flex Box Item</h1>
+        <p>Lorem adipisicing elit. Voluptas consectetur tempora quis nam, officia tenetur blanditiis in illo dolor?</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box flex-box-big">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">Another Wide Item</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quis ipsum, officia, aperiam tenetur dolor molestiae voluptate perferendis dolorem vel ex, unde fugit blanditiis sapiente.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">Flex Box Item</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo obcaecati in provident illo.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="">
+        <h1 class="flex-title">Last Flex Box Item</h1>
+        <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
+      </a>
+    </div>
   </div>
-
   <!--<div class="wrapper-for-content-outside-of-footer">
    Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
   </div>-->
-
   <footer class="footer-2" role="contentinfo">
     <div class="footer-logo">
       <img src="https://raw.githubusercontent.com/thoughtbot/refills/49db8c0f2f8066c2c3a275781503fe3303a1a9fc/source/images/placeholder.png" alt="Logo image">
@@ -141,7 +149,6 @@
       <li><a href="javascript:void(0)">Contact</a></li>
       <li><a href="javascript:void(0)">Products</a></li>
     </ul>
-
     <div class="footer-secondary-links">
       <ul>
         <li><a href="javascript:void(0)">Terms and Conditions</a></li>
@@ -149,8 +156,6 @@
       </ul>
     </div>
   </footer>
-
-  <script src="js/vendor/common.js"></script>
   <script src="js/home.js"></script>
 </body>
 
