--- a/app/about.html
+++ b/app/about.html
@@ -8,9 +8,9 @@
   <title>balm-html</title>
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/about.css">
   <!--[if lt IE 9]>
-  <link rel="stylesheet" href="css/ie.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/ie.css">
   <script src="//cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
@@ -18,7 +18,7 @@
 
 <body>
   <!--[if lt IE 10]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <header class="navigation" role="banner">
     <div class="navigation-wrapper">
@@ -145,7 +145,7 @@
       <div class="bottom-cover"></div>
     </div>
   </div>
-  <script src="js/about.js"></script>
+  <script src="%PUBLIC_URL%/scripts/about.js"></script>
 </body>
 
 </html>
