--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,10 @@
         your experience and security.
       </p>
     <![endif]-->
-    <h1>Hello <a href="https://balmjs.com/">BalmJS</a></h1>
-    <p>A Flexible Front-End Workflow</p>
+    <div class="flex-center full-height">
+      <h1>Hello <a href="https://balmjs.com/">BalmJS</a></h1>
+      <p>A Flexible Front-End Workflow</p>
+    </div>
     <script src="%PUBLIC_URL%/scripts/vendor/lib.js"></script>
     <script src="%PUBLIC_URL%/scripts/main.js"></script>
   </body>
