--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,42 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello BalmJS</title>
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css" />
-  </head>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Hello BalmJS</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <body>
-    <!--[if IE]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-        your experience and security.
-      </p>
-    <![endif]-->
-    <div class="flex-center full-height">
-      <h1>Hello <a href="https://balmjs.com/">BalmJS</a></h1>
-      <p>A Flexible Front-End Workflow</p>
-    </div>
-    <script src="%PUBLIC_URL%/scripts/vendor/lib.js"></script>
-    <script src="%PUBLIC_URL%/scripts/main.js"></script>
-  </body>
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+
+        <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
+        <!-- `modernizr.js`: for development -->
+        <!-- <script src="%PUBLIC_URL%/js/modernizr.js"></script> -->
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+        <p>Hello BalmJS! This is HTML5 Boilerplate.</p>
+
+        <script src="%PUBLIC_URL%/scripts/polyfill.js"></script>
+        <!-- build:js js/vendor.js -->
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/jquery-migrate/dist/jquery-migrate.min.js"></script>
+        <!-- endbuild -->
+        <script src="%PUBLIC_URL%/scripts/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script> -->
+    </body>
 </html>
