--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -17,22 +22,18 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
 
   <!-- Add your site or application content here -->
   <p>Hello BalmJS! This is HTML5 Boilerplate.</p>
 
   <!-- `modernizr.js`: for development -->
   <!-- <script src="%PUBLIC_URL%/js/modernizr.js"></script> -->
-  <script src="%PUBLIC_URL%/scripts/vendor/lib.js"></script>
   <script src="%PUBLIC_URL%/scripts/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <!-- <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
