--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/jquery-migrate/dist/jquery-migrate.min.js"></script>
   <!-- endbuild -->
-  <script src="%PUBLIC_URL%/js/main.js"></script>
+  <script src="%PUBLIC_URL%/scripts/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <!-- <script>
